Add waypoint rendering and enhance radar visualization